fixed version managing